@@ -1,5 +1,6 @@
 0.9.0 (unreleased)
 ------------------
+ - Fix regression when initializing soap objects with invalid kwargs.
 
 
 0.8.1 (2016-06-08)
